[gd_scene load_steps=10 format=2]

[ext_resource path="res://UI/UItheme.tres" type="Theme" id=1]
[ext_resource path="res://UI/ResetText.png" type="Texture" id=2]
[ext_resource path="res://UI/TouchControls.png" type="Texture" id=3]
[ext_resource path="res://UI/PlayText.png" type="Texture" id=4]
[ext_resource path="res://UI/MainMenu.png" type="Texture" id=5]
[ext_resource path="res://UI/Main Menu.gd" type="Script" id=6]
[ext_resource path="res://UI/ExitText.png" type="Texture" id=7]
[ext_resource path="res://UI/tutorial_text.png" type="Texture" id=8]
[ext_resource path="res://UI/MainMenuBackdrop.png" type="Texture" id=9]

[node name="Main Menu" type="CanvasLayer"]
layer = 6

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 6 )

[node name="NinePatchRect" type="NinePatchRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 9 )
patch_margin_top = 61
patch_margin_bottom = 46
axis_stretch_horizontal = 2
axis_stretch_vertical = 1

[node name="Sprite" type="Sprite" parent="Control"]
texture = ExtResource( 5 )
centered = false
region_rect = Rect2( 0, 0, 320, 180 )

[node name="Control" type="Control" parent="Control"]
anchor_left = 0.484
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.359985
margin_right = -0.47998

[node name="Control" type="Control" parent="Control/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -19.5
margin_top = -5.0
margin_right = 0.5

[node name="Play" type="Button" parent="Control/Control/Control"]
margin_left = -40.5
margin_top = -39.0
margin_right = 86.5
margin_bottom = -19.0
icon = ExtResource( 4 )

[node name="Tutorial" type="Button" parent="Control/Control/Control"]
margin_left = -41.0
margin_top = -14.0
margin_right = 86.0
margin_bottom = 10.0
icon = ExtResource( 8 )

[node name="Exit" type="Button" parent="Control/Control/Control"]
margin_left = -40.5
margin_top = 11.0
margin_right = 20.5
margin_bottom = 35.0
icon = ExtResource( 7 )

[node name="Reset" type="Button" parent="Control/Control/Control"]
margin_left = 24.5
margin_top = 11.0
margin_right = 85.5
margin_bottom = 35.0
icon = ExtResource( 2 )

[node name="CheckButton" type="CheckButton" parent="Control/Control/Control"]
margin_left = -40.5
margin_top = 36.0
margin_right = 86.5
margin_bottom = 67.0
shortcut_in_tooltip = false
icon = ExtResource( 3 )

[node name="Reset Confirmation" type="ConfirmationDialog" parent="Control"]
margin_right = 235.0
margin_bottom = 70.0
dialog_text = "                    Reset ALL game data?"

[connection signal="pressed" from="Control/Control/Control/Play" to="Control" method="_on_Play_pressed"]
[connection signal="pressed" from="Control/Control/Control/Tutorial" to="Control" method="_on_Tutorial_pressed"]
[connection signal="pressed" from="Control/Control/Control/Exit" to="Control" method="_on_Exit_pressed"]
[connection signal="pressed" from="Control/Control/Control/Reset" to="Control" method="_on_Reset_pressed"]
[connection signal="toggled" from="Control/Control/Control/CheckButton" to="Control" method="_on_CheckButton_toggled"]
[connection signal="confirmed" from="Control/Reset Confirmation" to="." method="_on_Reset_Confirmation_confirmed"]
